--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
 runtime: python37
+instance_class: F2
 api_version: 1
 threadsafe: true
 handlers:
@@ -6,7 +7,3 @@ handlers:
   static_dir: static
 - url: /.*
   script: main.app
-  
-libraries:
-  - name: ssl
-    version: latest
